@@ -1,3 +1,10 @@
+2018-04-08  Bruno Haible  <bruno@clisp.org>
+
+	Fix possible build failure on some Linux/powerpc machines.
+	Reported by Johannes Hielscher <jhielscher@posteo.de>.
+	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_END) [UNIX_LINUX && POWERPC]:
+	Shrink.
+
 2018-02-24  Bruno Haible  <bruno@clisp.org>
 
 	Fix memory map related warnings on Alpine Linux 3.7/i386.
